--- a/ABOWUN/app/src/main/res/values/strings.xml
+++ b/ABOWUN/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="nombre_cientifico_8">Turdus Fuscater</string>
     <string name="nombre_comun_9">Copeton</string>
     <string name="nombre_cientifico_9">Zonotrichia Capensis</string>
+    <string name="test">esto es un prueba muy imprtante jajaja</string>
 </resources>
